# kaomoji

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
kaomoji/: __main__.py  config.py  kaomoji.py
tests/: test_kaomoji.py
